--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -4,3 +4,20 @@
   <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"),
+            'http://rubyonrails.org/' %>
+
+<%= link_to image_tag("kitten.jpg", alt: "Cat Photo"),
+            'https://www.railstutorial.org/book/filling_in_the_layout#fig-kitten' %>
